bdr.BDR2.scala.error
Compilation error:
BDR2:19: error: value backward is not a member of Unit
  case "U" => backward();backward();backward()backward();backward();backward();
                                              ^